Bug 1165732 - Block WARP when using the built-in VGA driver. r=bas, a=sledru

WARP is amazingly slow on the VGA driver on Windows 7. Let's not use it.